Archive Dark Mode Fixes

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -418,7 +418,7 @@ footer {
 		background: $link-hover;
 		border-radius: 3px;
 		padding: 8px 20px;
-		color: white;
+		color: $winter-day-lt;
 		transition: background 0.3s ease;
 		text-decoration: none;
 		&:hover {
